[package]
name = "stone_age"
version = "0.2.0"
authors = ["ubuntunux <ubuntunux@gmail.com>"]
license = "BSD 2-Clause"
homepage = "https://github.com/ubuntunux/StoneAge"
repository = "https://github.com/ubuntunux/StoneAge"
readme = "README.md"
edition = "2021"

[dependencies]
rust_engine_3d = { path = "RustEngine3D" }
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
log = "0.4"
nalgebra = {version = "0.33", features = ["serde-serialize"]}
nalgebra-glm = "0.19.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
winit = "0.29.15"

[[bin]]
name = "stone_age"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

[package.metadata.android]
apk_label = "RustEngine3D"
#android_version = 29
#target_sdk_version = 29
#min_sdk_version = 26
assets = "resources"
#package_name = "rust.cargo.apk.advanced"
#res = "resources"
#fullscreen = false
#icon = "@mipmap/ic_launcher"
#opengles_version_major = 3
#opengles_version_minor = 2
build_targets = [
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android"
]

#[package.metadata.android.activity_attributes]
#"android:screenOrientation" = "unspecified"
#"android:uiOptions" = "none"

#[[package.metadata.android.feature]]
#name = "android.hardware.camera"

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.level"
version = "1"
required = true

[[package.metadata.android.permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
#max_sdk_version = 18

[[package.metadata.android.permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"
#max_sdk_version = 18

[[package.metadata.android.permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"
#max_sdk_version = 18

#[[package.metadata.android.permission]]
#name = "android.permission.CAMERA"